# cloudnote-music-player

./: DEPLOY.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: OPERATIONS.md  PROJECT-MANAGEMENT.md  TEST-CASES.md
src/: App.vue  main.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/services/: audio.ts  file.ts  jamendo.ts
src/stores/: persist.ts  player.ts
