[package]
name = "cloudnote-music-player"
version = "0.1.0"
description = "A Tauri music player application"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "^2.0.0"
tauri-plugin-dialog = "^2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
id3 = "1.0"
umd = "0.48"
walkdir = "2.5"
tokio = { version = "1", features = ["fs"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
